Import components from bit package

--- a/malty/atoms/Button/Button.docs.mdx
+++ b/malty/atoms/Button/Button.docs.mdx
@@ -3,7 +3,8 @@ labels: ['react', 'typescript', 'button']
 description: 'A Button component.'
 ---
 
-import { Button } from './button';
+import { Button, ButtonType } from '.';
+import { MaltyThemeProvider } from '@carlsberg/malty.theme.malty-theme-provider';
 
 Button example:
 
@@ -11,5 +12,7 @@ A simple Button component with some text
 
 // live component playground - if you remove the word live it turns into a code snippet
 ```js live
-<Button>click me</Button>
+  <MaltyThemeProvider theme="defaultTheme">
+    <Button buttonType={ButtonType.Primary} text="Clickable button" />
+  </MaltyThemeProvider>
 ```
