--- a/malty/atoms/Text/Text.docs.mdx
+++ b/malty/atoms/Text/Text.docs.mdx
@@ -2,8 +2,8 @@
 labels: ['react', 'typescript', 'text']
 description: 'A Text component.'
 ---
-
-import { Text } from './text';
+import { MaltyThemeProvider } from '@carlsberg/malty.theme.malty-theme-provider';
+import { Text } from './Text';
 
 Text example:
 
@@ -11,5 +11,7 @@ A simple Text component with some text
 
 // live component playground - if you remove the word live it turns into a code snippet
 ```js live
-<Text>click me</Text>
+  <MaltyThemeProvider theme="defaultTheme">
+    <Text content="click me" />
+  </MaltyThemeProvider>
 ```
