Added resuable component parts for icons.

--- a/malty/atoms/Button/Button.docs.mdx
+++ b/malty/atoms/Button/Button.docs.mdx
@@ -12,7 +12,7 @@ A simple Button component with some text
 
 // live component playground - if you remove the word live it turns into a code snippet
 ```js live
-  <MaltyThemeProvider theme="defaultTheme">
+  <MaltyThemeProvider theme="global">
     <Button buttonType={ButtonType.Primary} text="Clickable button" />
   </MaltyThemeProvider>
 ```
