--- a/malty/atoms/Overlay/Overlay.docs.mdx
+++ b/malty/atoms/Overlay/Overlay.docs.mdx
@@ -1,6 +1,6 @@
 ---
 labels: ['react', 'typescript', 'overlay']
-description: 'A Icon component.'
+description: 'An Overlay component.'
 ---
 
 import { Overlay } from '.';
