--- a/malty/atoms/Text/Text.docs.mdx
+++ b/malty/atoms/Text/Text.docs.mdx
@@ -11,7 +11,7 @@ A simple Text component with some text
 
 // live component playground - if you remove the word live it turns into a code snippet
 ```js live
-  <MaltyThemeProvider theme="defaultTheme">
+  <MaltyThemeProvider theme="global">
     <Text content="click me" />
   </MaltyThemeProvider>
 ```
