--- a/malty/icons/AddProject/Icon.docs.mdx
+++ b/malty/icons/AddProject/Icon.docs.mdx
@@ -14,7 +14,7 @@ An simple Icon component with some text
 
 Code Snippet:
 ```js
-<MaltyThemeProvider theme="defaultTheme">
+<MaltyThemeProvider theme="global">
     <Icon color={Colors.Primary} size={SizesTypes.Small} />
 </MaltyThemeProvider>
 ```
@@ -22,7 +22,7 @@ Code Snippet:
 
 Live Playground:
 ```js live
-<MaltyThemeProvider theme="defaultTheme">
+<MaltyThemeProvider theme="global">
     <Icon color={Colors.Primary} size={SizesTypes.Small} />
 </MaltyThemeProvider>
 ```
