--- a/malty/atoms/Checkbox/Checkbox.docs.mdx
+++ b/malty/atoms/Checkbox/Checkbox.docs.mdx
@@ -3,13 +3,15 @@ labels: ['react', 'typescript', 'checkbox']
 description: 'A Checkbox component.'
 ---
 
-import { Checkbox } from './checkbox';
+import { MaltyThemeProvider } from '@carlsberg/malty.theme.malty-theme-provider';
+import { Checkbox } from './Checkbox';
 
 Checkbox example:
 
 A simple checkbox component with a value
 
-// live component playground - if you remove the word live it turns into a code snippet
 ```js live
-<Checkbox value="Test" checked={true}>
+<MaltyThemeProvider theme="global">
+  <Checkbox value="Test" checked={true} onValueChange={() => null} />
+</MaltyThemeProvider>
 ```
