--- a/malty/atoms/Button/Button.docs.mdx
+++ b/malty/atoms/Button/Button.docs.mdx
@@ -3,15 +3,40 @@ labels: ['react', 'typescript', 'button']
 description: 'A Button component.'
 ---
 
+import { IconNamesTypes } from '@carlsberg/malty.atoms.icon';
 import { MaltyThemeProvider } from '@carlsberg/malty.theme.malty-theme-provider';
 import { Button, ButtonType } from '.';
 
 Button example:
 
-A simple Button component with some text
+A simple Button with `buttonType={Primary}` 
 
 ```js live
-  <MaltyThemeProvider theme="global">
-    <Button buttonType={ButtonType.Primary} text="Clickable button" />
-  </MaltyThemeProvider>
+<MaltyThemeProvider theme="global">
+  <Button buttonType={ButtonType.Primary} text="Primary button" />
+</MaltyThemeProvider>
+```
+
+A simple Button with `buttonType={Secondary}` 
+
+```js live
+<MaltyThemeProvider theme="global">
+  <Button buttonType={ButtonType.Secondary} text="Secondary button" />
+</MaltyThemeProvider>
+```
+
+A simple Button with `buttonType={Floater}` 
+
+```js live
+<MaltyThemeProvider theme="global">
+  <Button buttonType={ButtonType.Floater} icon={IconNamesTypes.ArrowSmallUp} />
+</MaltyThemeProvider>
+```
+
+A simple Button with `buttonType={Link}` 
+
+```js live
+<MaltyThemeProvider theme="global">
+  <Button buttonType={ButtonType.Link} text="Link button" />
+</MaltyThemeProvider>
 ```
