--- a/malty/atoms/Icon/Icon.docs.mdx
+++ b/malty/atoms/Icon/Icon.docs.mdx
@@ -7,14 +7,28 @@ import { MaltyThemeProvider } from '@carlsberg/malty.theme.malty-theme-provider'
 import { Icon } from './Icon';
 import { Colors, NamesTypes, SizesTypes } from './Icon.types';
 
-
 Icon example:
 
-An simple Icon component with some text
+An simple Icon component
 
-Live Playground:
 ```js live
 <MaltyThemeProvider theme="global">
   <Icon name={NamesTypes.AddContent} color={Colors.Primary} size={SizesTypes.Small} />
+</MaltyThemeProvider>
+```
+
+An clickable Icon component
+
+```js live
+<MaltyThemeProvider theme="global">
+  <Icon
+    name={NamesTypes.AddContent}
+    color={Colors.Primary}
+    size={SizesTypes.Small}
+    onClick={() => {
+      // eslint-disable-next-line no-console
+      console.log('Just got clicked!');
+    }}
+  />
 </MaltyThemeProvider>
 ```
