--- a/malty/atoms/Input/Input.docs.mdx
+++ b/malty/atoms/Input/Input.docs.mdx
@@ -4,8 +4,8 @@ description: 'A Icon component.'
 ---
 
 import { MaltyThemeProvider } from '@carlsberg/malty.theme.malty-theme-provider';
-import { default as Icon } from './index';
-import { Colors, SizesTypes } from '@carlsberg/malty.atoms.icon-wrapper';
+import { Input } from './Input';
+import { InputType } from './Input.types';
 
 Icon example:
 
@@ -15,6 +15,6 @@ Live Playground:
 
 ```js live
 <MaltyThemeProvider theme="global">
-  <Icon color={Colors.Primary} size={SizesTypes.Small} />
+  <Input type={InputType.Text} value={'This is a test input'} onValueChange={() => null} />
 </MaltyThemeProvider>
 ```
