--- a/malty/atoms/Tooltip/Tooltip.docs.mdx
+++ b/malty/atoms/Tooltip/Tooltip.docs.mdx
@@ -2,8 +2,8 @@
 labels: ['react', 'typescript', 'text']
 description: 'A Tooltip component.'
 ---
+
 import { MaltyThemeProvider } from '@carlsberg/malty.theme.malty-theme-provider';
-import { Button, ButtonType } from '@carlsberg/malty.atoms.button';
 import { Tooltip, Position } from '.';
 
 Text example:
@@ -13,7 +13,9 @@ A simple Tooltip component with some text
 ```js live
 <MaltyThemeProvider theme="global">
   <Tooltip position={Position.Top} content={<span>Contents</span>} isOpen>
-    <Button buttonType={ButtonType.Primary} text="Button" />
+    <button type="button" onClick={() => null}>
+      Toggle
+    </button>
   </Tooltip>
 </MaltyThemeProvider>
 ```
@@ -23,7 +25,9 @@ A simple Tooltip component with some text
 ```js live
 <MaltyThemeProvider theme="global">
   <Tooltip position={Position.Right} content={<span>Contents</span>} isOpen>
-    <Button buttonType={ButtonType.Primary} text="Button" />
+    <button type="button" onClick={() => null}>
+      Toggle
+    </button>
   </Tooltip>
 </MaltyThemeProvider>
 ```
@@ -33,7 +37,9 @@ A simple Tooltip component with some text
 ```js live
 <MaltyThemeProvider theme="global">
   <Tooltip position={Position.Bottom} content={<span>Contents</span>} isOpen>
-    <Button buttonType={ButtonType.Primary} text="Button" />
+    <button type="button" onClick={() => null}>
+      Toggle
+    </button>
   </Tooltip>
 </MaltyThemeProvider>
 ```
@@ -43,7 +49,9 @@ A simple Tooltip component with some text
 ```js live
 <MaltyThemeProvider theme="global">
   <Tooltip position={Position.Left} content={<span>Contents</span>} isOpen>
-    <Button buttonType={ButtonType.Primary} text="Button" />
+    <button type="button" onClick={() => null}>
+      Toggle
+    </button>
   </Tooltip>
 </MaltyThemeProvider>
 ```
