--- a/malty/molecules/Loading/Loading.docs.mdx
+++ b/malty/molecules/Loading/Loading.docs.mdx
@@ -3,7 +3,7 @@ labels: ['react', 'typescript', 'icon']
 description: 'A Icon component.'
 ---
 
-import { MaltyThemeProvider } from '@carlsberg/malty.theme.malty-theme-provider';
+import { MaltyThemeProvider } from '@carlsberggroup/malty.theme.malty-theme-provider';
 import { Loading } from './Loading';
 import { SizeTypes, LoadingStatus } from './Loading.types';
 
