Additional details for loading parameters and details

--- a/malty/molecules/Loading/Loading.docs.mdx
+++ b/malty/molecules/Loading/Loading.docs.mdx
@@ -15,6 +15,6 @@ Live Playground:
 
 ```js live
 <MaltyThemeProvider theme="global">
-  <Loading text={'Loading...'} size={SizeTypes.Large} status={LoadingStatus.Default} />
+  <Loading text={'Loading...'} size={SizeTypes.Large} status={LoadingStatus.Pending} />
 </MaltyThemeProvider>
 ```
