--- a/malty/molecules/CodeInput/CodeInput.docs.mdx
+++ b/malty/molecules/CodeInput/CodeInput.docs.mdx
@@ -3,7 +3,6 @@ labels: ['react', 'typescript', 'icon']
 description: 'A Icon component.'
 ---
 
-import { MaltyThemeProvider } from '@carlsberggroup/malty.theme.malty-theme-provider';
 import { CodeInput } from './CodeInput';
 import { CodeInputType } from './CodeInput.types';
 
@@ -14,7 +13,5 @@ An simple Icon component with some text
 Live Playground:
 
 ```js live
-<MaltyThemeProvider theme="global">
-  <CodeInput type={InputType.Text} value={'This is a test input'} onValueChange={() => null} />
-</MaltyThemeProvider>
+<CodeInput type={CodeInputType.Text} value={'This is a test input'} onValueChange={() => null} />
 ```
