Updated button component -- Fix bug on children, fix loading, added success and error state.

--- a/malty/atoms/Button/Button.docs.mdx
+++ b/malty/atoms/Button/Button.docs.mdx
@@ -33,3 +33,9 @@ A simple Button with `ButtonStyle={Link}` and text as a child
 ```js live
 <Button style={ButtonStyle.Link}>Link button</Button>
 ```
+
+A simple Button with `text as child`
+
+```js live
+<Button style={ButtonStyle.Primary}> Test </Button>
+```
