Tooltip styling cleanup

--- a/malty/atoms/Tooltip/Tooltip.docs.mdx
+++ b/malty/atoms/Tooltip/Tooltip.docs.mdx
@@ -7,42 +7,34 @@ import { Tooltip, Position } from '.';
 
 Text example:
 
-A simple Tooltip component with some text
+A simple top Tooltip component with some text
 
 ```js live
-<Tooltip position={Position.Top} content={<span>Contents</span>} isOpen>
-  <button type="button" onClick={() => null}>
-    Toggle
-  </button>
+<Tooltip position={Position.Top} isOpen>
+  A simple top Tooltip component with some text
 </Tooltip>
 ```
 
-A simple Tooltip component with some text
+A right simple Tooltip component with some text
 
 ```js live
-<Tooltip position={Position.Right} content={<span>Contents</span>} isOpen>
-  <button type="button" onClick={() => null}>
-    Toggle
-  </button>
+<Tooltip position={Position.Right} isOpen>
+  A right simple Tooltip component with some text
 </Tooltip>
 ```
 
-A simple Tooltip component with some text
+A simple bottom Tooltip component with some text
 
 ```js live
-<Tooltip position={Position.Bottom} content={<span>Contents</span>} isOpen>
-  <button type="button" onClick={() => null}>
-    Toggle
-  </button>
+<Tooltip position={Position.Bottom} isOpen>
+  A simple bottom Tooltip component with some text
 </Tooltip>
 ```
 
-A simple Tooltip component with some text
+A simple left Tooltip component with some text
 
 ```js live
-<Tooltip position={Position.Left} content={<span>Contents</span>} isOpen>
-  <button type="button" onClick={() => null}>
-    Toggle
-  </button>
+<Tooltip position={Position.Left} isOpen>
+  A simple left Tooltip component with some text
 </Tooltip>
 ```
