--- a/malty/atoms/PaddedContainer/PaddedContainer.docs.mdx
+++ b/malty/atoms/PaddedContainer/PaddedContainer.docs.mdx
@@ -3,20 +3,20 @@ labels: ['react', 'typescript', 'overlay']
 description: 'An Container component.'
 ---
 
-import { Container } from '.';
+import { PaddedContainer } from '.';
 
-Container example:
+PaddedContainer example:
 
-An Container component to be used with modals/panes/curtains
+A Container component to be used with modals/panes/curtains
 
 Live Playground:
 
 ```js live
-<Container padding="None">
+<PaddedContainer padding="None">
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
   aliqua. Sit amet commodo nulla facilisi nullam. Duis at consectetur lorem donec massa sapien. Imperdiet sed euismod
   nisi porta lorem mollis aliquam ut porttitor. Dictum sit amet justo donec enim diam vulputate ut pharetra. Amet cursus
   sit amet dictum sit amet justo donec. In aliquam sem fringilla ut. Tortor consequat id porta nibh venenatis cras. Diam
   sit amet nisl suscipit. Natoque penatibus et magnis dis. Egestas purus viverra accumsan in nisl.
-</Container>
+</PaddedContainer>
 ```
