--- a/malty/atoms/Tooltip/Tooltip.docs.mdx
+++ b/malty/atoms/Tooltip/Tooltip.docs.mdx
@@ -11,30 +11,6 @@ A simple top Tooltip component with some text
 
 ```js live
 <Tooltip position={Position.Top} isOpen>
-  A simple top Tooltip component with some text
-</Tooltip>
-```
-
-A right simple Tooltip component with some text
-
-```js live
-<Tooltip position={Position.Right} isOpen>
-  A right simple Tooltip component with some text
-</Tooltip>
-```
-
-A simple bottom Tooltip component with some text
-
-```js live
-<Tooltip position={Position.Bottom} isOpen>
-  A simple bottom Tooltip component with some text
-</Tooltip>
-```
-
-A simple left Tooltip component with some text
-
-```js live
-<Tooltip position={Position.Left} isOpen>
-  A simple left Tooltip component with some text
+  This is the content
 </Tooltip>
 ```
