--- a/malty/molecules/Stepper/Stepper.docs.mdx
+++ b/malty/molecules/Stepper/Stepper.docs.mdx
@@ -3,7 +3,7 @@ labels: ['react', 'typescript', 'icon']
 description: 'A Icon component.'
 ---
 
-import { StepperProcess } from './StepperProcess';
+import { Stepper } from './Stepper';
 
 Icon example:
 
@@ -12,5 +12,5 @@ An simple Icon component with some text
 Live Playground:
 
 ```js live
-<StepperProcess steps={5} currentStep={2} />
+<Stepper steps={5} currentStep={2} />
 ```
