--- a/malty/molecules/Stepper/Stepper.docs.mdx
+++ b/malty/molecules/Stepper/Stepper.docs.mdx
@@ -1,13 +1,13 @@
 ---
-labels: ['react', 'typescript', 'icon']
-description: 'A Icon component.'
+labels: ['react', 'typescript', 'stepper']
+description: 'A Stepper component.'
 ---
 
 import { Stepper } from './Stepper';
 
-Icon example:
+Stepper example:
 
-An simple Icon component with some text
+An simple Stepper component
 
 Live Playground:
 
