Bit docs update

--- a/malty/atoms/Input/Input.docs.mdx
+++ b/malty/atoms/Input/Input.docs.mdx
@@ -1,52 +1,4 @@
 ---
-labels: ['react', 'typescript', 'icon']
-description: 'A Icon component.'
+labels: ['react', 'typescript', 'input']
+description: 'An Input component.'
 ---
-
-import { IconNamesTypes } from '@carlsberggroup/malty.atoms.icon';
-import { Input } from './Input';
-import { InputType, IconPosition } from './Input.types';
-
-Icon example:
-
-An simple Icon component with some text
-
-Live Playground:
-
-```js live
-<Input type={InputType.Text} value={'This is a test input'} onValueChange={() => null} />
-```
-
-```js live
-<Input type={InputType.Number} value={0} onValueChange={() => null} />
-```
-
-```js live
-<Input type={InputType.Email} value={'test@carlsberg.com'} onValueChange={() => null} />
-```
-
-```js live
-<Input type={InputType.Password} value={'123456'} onValueChange={() => null} />
-```
-
-```js live
-<Input type={InputType.Date} value={'01/01/1970'} onValueChange={() => null} />
-```
-
-```js live
-<Input
-  type={InputType.Search}
-  value={'Test query'}
-  icon={IconNamesTypes.Search}
-  iconPosition={IconPosition.Left}
-  onValueChange={() => null}
-/>
-```
-
-```js live
-<Input type={InputType.Telephone} value={'999-9999'} onValueChange={() => null} />
-```
-
-```js live
-<Input type={InputType.URL} value={'https://www.domain.com'} onValueChange={() => null} />
-```
