--- a/malty/atoms/Pill/Pill.docs.mdx
+++ b/malty/atoms/Pill/Pill.docs.mdx
@@ -1,16 +1,4 @@
 ---
-labels: ['react', 'typescript', 'icon']
-description: 'A Icon component.'
+labels: ['react', 'typescript', 'pill']
+description: 'A Pill component.'
 ---
-
-import { Pill } from './Pill';
-
-Pill example:
-
-A simple Icon component with some text
-
-Live Playground:
-
-```js live
-<Pill text="Pill text" />
-```
