--- a/malty/atoms/ProgressBar/ProgressBar.docs.mdx
+++ b/malty/atoms/ProgressBar/ProgressBar.docs.mdx
@@ -1,14 +1,4 @@
 ---
-labels: ['react', 'typescript', 'button']
+labels: ['react', 'typescript', 'progressbar']
 description: 'A Progress Bar component.'
 ---
-
-import { ProgressBar } from '.';
-
-Button example:
-
-A simple Progress Bar component with some text
-
-```js live
-<ProgressBar progress={25} displayAmount={false} label="Loading data..." />
-```
