--- a/malty/molecules/CodeInput/CodeInput.docs.mdx
+++ b/malty/molecules/CodeInput/CodeInput.docs.mdx
@@ -1,17 +1,4 @@
 ---
-labels: ['react', 'typescript', 'icon']
-description: 'A Icon component.'
+labels: ['react', 'typescript', 'codeinput']
+description: 'A Code Input component.'
 ---
-
-import { CodeInput } from './CodeInput';
-import { CodeInputType } from './CodeInput.types';
-
-Icon example:
-
-An simple Icon component with some text
-
-Live Playground:
-
-```js live
-<CodeInput type={CodeInputType.Text} value={'This is a test input'} onValueChange={() => null} />
-```
