--- a/malty/molecules/Loading/Loading.docs.mdx
+++ b/malty/molecules/Loading/Loading.docs.mdx
@@ -1,17 +1,4 @@
 ---
-labels: ['react', 'typescript', 'icon']
-description: 'A Icon component.'
+labels: ['react', 'typescript', 'loading']
+description: 'A Loading component.'
 ---
-
-import { Loading } from './Loading';
-import { SizeTypes, LoadingStatus } from './Loading.types';
-
-Icon example:
-
-An simple Icon component with some text
-
-Live Playground:
-
-```js live
-<Loading text={'Loading...'} size={SizeTypes.Large} status={LoadingStatus.Default} />
-```
