--- a/malty/molecules/Toast/Toast.docs.mdx
+++ b/malty/molecules/Toast/Toast.docs.mdx
@@ -1,4 +1,4 @@
 ---
-labels: ['react', 'typescript', 'alert']
-description: 'An Alert component.'
+labels: ['react', 'typescript', 'toast']
+description: 'A Toast component.'
 ---
