--- a/malty/molecules/ProductCard/ProductCard.docs.mdx
+++ b/malty/molecules/ProductCard/ProductCard.docs.mdx
@@ -1,4 +1,4 @@
 ---
-labels: ['react', 'typescript', 'card']
+labels: ['react', 'typescript', 'card', 'product']
 description: 'A Product Card component.'
 ---
