--- a/malty/atoms/ProgressCircle/ProgressCircle.docs.mdx
+++ b/malty/atoms/ProgressCircle/ProgressCircle.docs.mdx
@@ -1,4 +1,4 @@
 ---
 labels: ['react', 'typescript', 'progress-circle']
-description: 'A Progress Circle component.'
+description: 'The Progress-Circle component is a dynamic graph component designed to display percentage data in a circular format.'
 ---
