--- a/malty/organisms/Carousel/Carousel.docs.mdx
+++ b/malty/organisms/Carousel/Carousel.docs.mdx
@@ -1,3 +1,4 @@
 ---
-labels: ['react', 'typescript', 'pagination']
+labels: ['react', 'typescript', 'label']
+description: 'An Carousel component.'
 ---
